<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dutch</string>
    <string name="app_dialog_title">dutch</string>
    <string name="version">2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="welcome">explore</string>
    <string name="add_card">Add card</string>
    <string name="pay_bill">Pay bill</string>
    <string name="view_bill">View bill</string>
    <string name="view_payments">View payments</string>
    <string name="make_payment">Make a payment</string>
    <string name="explore">Explore</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="home_dining">Where are you dining today?</string>
    <string name="invoicePayString">Pay Bill</string>
    <string name="invoiceDollarSplit">$</string>
    <string name="invoicePercentSplit">÷</string>
    <string name="invoice_divider">************</string>
    <string name="invoice_subtotal">Sub Total</string>
    <string name="invoice_tax">Tax</string>
    <string name="invoice_service_charge">Service Charge</string>
    <string name="invoice_discount">Discount</string>
    <string name="invoice_amount_due">Amount Due</string>
    <string name="invoice_already_paid">Already Paid</string>
    <string name="title_activity_additional_tip">AdditionalTip</string>
    <string name="additional_tip_my_total">My Total:</string>
    <string name="additional_tip_my_tip">Tip:</string>
    <string name="continueString">Continue</string>
    <string name="eighteen_percent_text">18%</string>
    <string name="twenty_percent_text">20%</string>
    <string name="twentytwo_percent_text">22%</string>
    <string name="title_activity_confirm_payment">ConfirmPayment</string>
    <string name="confirm_pin_string">Please enter your PIN</string>
    <string name="confirm_make_payment">Confirm Payment</string>
    <string name="confirm_total">Total:</string>
    <string name="confirm_payment">Payment:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_review">Review</string>
    <string name="review_default_title">Please give the restaurant some feedback:</string>
    <string name="review_star_text">Click a star to rate your experience</string>
    <string name="revew_skip_text">Skip</string>
    <string name="review_submit">Submit</string>
    <string name="review_hint">Additional Comments:</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="init_continue_string">By continuing you agree to the:</string>
    <string name="terms_string">Terms of Use</string>
    <string name="privacy_string">Privacy Policy</string>
    <string name="start_using_string">Start Using dutch!</string>
    <string name="welcome_string">Welcome to dutch!</string>
    <string name="step_one_text">1. Enter your check number.</string>
    <string name="step_two_text">2. View the bill.</string>
    <string name="step_three_text">3. Split the check!</string>
    <string name="init_sub_title">Pay your restaurant bill in 3 easy steps:</string>
    <string name="title_activity_support">Support</string>
    <string name="support_title">dutch support</string>
    <string name="support_subtitle">Questions or Feedback?  Send us an email or give us a call:</string>
    <string name="send_email_button">Send Email</string>
    <string name="dutch_email">support@arcmobileapp.com</string>
    <string name="call_string">Call Now</string>
    <string name="dutch_phone">(708) 320-9272</string>
    <string name="receipt_description">Receipt Image</string>
    <string name="funds_secure_text">dutch is 100% secure.  Your card information is encrypted with your personal PIN, and can only be accessed for purchases with your approval.</string>
    <string name="home_dining_new">Where are you dining today?</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="log_out_text">Sign Out</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="create_text">Create</string>
    <string name="log_in_text">Log In</string>
    <string name="logged_out_info">You are not currently logged in.  Please log in our create an account to continue.</string>
    <string name="title_activity_user_create">UserCreate</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_user_create_new">UserCreateNew</string>
    <string name="register_string">Register Now!</string>
    <string name="register_title_string">Enter your email and create a password</string>
    <string name="title_activity_guest_create_customer">GuestCreateCustomer</string>
    <string name="guest_create_string">Would you like to create an account?</string>
    <string name="guest_create_explain">If you create an account, we can send you email receipts of your transactions!</string>
    <string name="create_string">Create</string>
    <string name="nothanks_string">No Thanks</string>
    <string name="no_payments_string">No payments have been made on this invoice.</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="check_help_string_one">Can\'t find your check #?</string>
    <string name="check_help_two">"Click the "</string>
    <string name="view_check_help_splitting">Splitting the Check!</string>
    <string name="view_check_help_item">To pay for a single item, just touch that item on your bill!</string>
    <string name="view_check_help_dollar_percent">To pay a dollar amount, or split evenly between a certain number of people, click here!</string>
    <string name="view_check_help_total">The amount you are about to pay will always be shown as \"My Total\" at the bottom of the page.</string>
    <string name="title_activity_edit_server">EditServer</string>
    <string name="edit_server_string">View/Change dutch Server</string>
    <string name="new_server_string">Choose your new server:</string>
    <string name="view_check_help_item_hold">(press and hold to split a single item)</string>
    <string name="title_activity_payment_history">PaymentHistory</string>
    <string name="title_activity_payment_detail">PaymentDetail</string>
    <string name="paymentHistoryString">View Payment History</string>
    <string name="resendEmailString">Re-send Email Receipt</string>
    <string name="copyEmailString">A copy of this receipt will be sent to your email address</string>
    <string name="confirmationNumber">Confirmation #:</string>
    <string name="baseAmountString">Base Amount:</string>
    <string name="tipString">Tip:</string>
    <string name="paymentString">Payment:</string>
    <string name="checkNumberString">Check #:</string>
    <string name="notesString">Notes:</string>

</resources>