
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/text_enter_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/init_continue_string"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button1"
        style="@style/BlueButton"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/terms_string" />

    <Button
        android:id="@+id/Button01"
        style="@style/BlueButton"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_enter_pin"
        android:layout_marginRight="20dp"
        android:text="@string/privacy_string" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/welcome_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="40dp"
        android:text="@string/step_two_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="43dp"
        android:text="@string/step_three_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="55dp"
        android:text="@string/step_one_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        style="@style/CustomButton"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_above="@+id/text_enter_pin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:onClick="onStartClicked"
        
        android:text="@string/start_using_string" />

</RelativeLayout>