<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserProfile" >

    <RelativeLayout
        android:id="@+id/logged_in_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email_text"
            android:layout_below="@+id/email_text"
            android:layout_marginTop="10dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_below="@+id/password_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="115dp"
            android:background="@drawable/i_button_grey"
            android:onClick="onLogoutClicked"
            android:text="@string/sign_out_text" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logged_out_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="129dp"
            android:background="@drawable/i_button_grey"
            android:onClick="onLogInClicked"
            android:text="@string/log_in_text" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/i_button_grey"
            android:onClick="onCreateNewClicked"
            android:text="@string/create_text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/logged_out_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>
