<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    style="@style/ParentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Home" >

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/home_dining"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textStyle="bold" />
			
    <com.arcmobileapp.utils.CarouselScrollView android:id="@+id/scroll"
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

        
        <LinearLayout android:id="@+id/carousel"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"/>
                      

    </com.arcmobileapp.utils.CarouselScrollView>

    <TextView
        android:id="@+id/current_merchant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="30sp" />

    <Button
        android:id="@+id/pay_bill_button"
        style="@style/CustomButton"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:onClick="onPayBillClick"
        android:padding="10dp"
        android:text="@string/pay_bill" />
    
    <Button
        android:id="@+id/explore_button"
        style="@style/CustomButton"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onExploreClick"
        android:padding="10dp"
        android:text="@string/explore" />

</LinearLayout>