<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Funds" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/help_dollar_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:src="@drawable/lock" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_gravity="fill"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/help_dollar_arrow"
            android:text="@string/funds_secure_text"
            android:textSize="13sp" />
    </RelativeLayout>

   

    <Button
        android:id="@+id/add_card_button"
        style="@style/CustomButton"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/i_button_green"
        android:minHeight="48dp"
        android:onClick="onAddCardClick"
        android:paddingTop="10dp"
        android:text="@string/add_card" />
    
    <Button
             android:id="@+id/Button01"
             android:layout_width="220dp"
             android:layout_height="46dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:background="@drawable/i_button_grey"
             android:onClick="onViewPaymentHistoryClicked"
             android:text="@string/paymentHistoryString"
             android:textColor="@color/black"
             android:textColorHint="@color/darkGray" />
    
    
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Button01"
        android:layout_below="@id/add_card_button"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:id="@+id/stored_cards_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>
    
     

</RelativeLayout>